compiler/typ/tests/fixtures/diagnostics/0217_adt_record_field_int_bool_09.ml.infer.expected
File "0217_adt_record_field_int_bool_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0217_adt_record_field_int_bool_09 is not a valid module name.

File "0217_adt_record_field_int_bool_09.ml", line 1, characters 31-35:
1 | type rec_iota = { depth : int; done : bool }
                                   ^^^^
Error: Syntax error
