compiler/typ/tests/fixtures/diagnostics/0217_adt_record_field_int_bool_09.ml
type rec_iota = { depth : int; done : bool }
let _ : rec_iota = { depth = true; done = true }
